# smoke-detector-detector

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  analyze_audio.py  config.example.json  config.py  debug_detection.py  extract_test_audio.py  install.sh  main.py  notifiers.py  pyproject.toml  record_audio.py  simple_test.py  smoke-detector.service  smoke_detection_algorithm.py  test_runner.py  uninstall.sh  visualize_fft.py
.claude/: settings.local.json
test_audio/: test_cases.json
