[project]
name = "smoke-detector-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "yt-dlp>=2023.12.30",
    "librosa>=0.10.1",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.11.9",
]
